...
  int _currentPage = 0;
  final Map<int, bool> _answers = {};

  // 4 survey questions
  final List<SurveyQuestion> _questions = const [
    SurveyQuestion(
      question: 'Apakah informasi yang disajikan sudah sesuai?',
      positiveAnswer: 'Iya sesuai',
      negativeAnswer: 'Tidak, ada yang berubah',
    ),
    SurveyQuestion(
      question: 'Apakah tempat ini nyaman untuk dikunjungi?',
      positiveAnswer: 'Ya, nyaman',
...
