...
                      label: 'Artikel',
                      onTap: () => controller.changeTab(2),
                    ),
                  ),
                  Expanded(
                    child: NavItem(
                      key: Key('bottom_nav_profile'),
                      isActive: controller.currentIndex == 3,
                      inactiveIcon: AppIcon(AppAssets.icons.profile),
                      activeIcon: AppIcon(AppAssets.icons.profileActive,
                          color: AppColors.primary),
                      label: 'Akun',
                      onTap: () => controller.changeTab(3),
...
